--- a/src/components/Homepage/Header/Header.css
+++ b/src/components/Homepage/Header/Header.css
@@ -1,7 +1,6 @@
 #header{
-    margin-top: -80px;
-    margin-right: -15px;
-    padding-top:70px;
+    margin-top: -120px;
+    padding-top:125px;
     padding-bottom:150px;
    
 }
